Update README file.